[tool.poetry]
name = "easyxl"
version = "0.3.1"
description = ""
authors = ["Richard Carter <goobysc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"
notebook = "^6.5.2"
black = "^22.12.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
